# visbot_monitor_ws

./: .gitignore
.catkin_tools/profiles/default/: devel_collisions.txt
bringup/scripts/: chmod_+x_all.sh  visbot_gui.sh  visbot_record.sh  visbot_restart.sh  visbot_setup.sh  visbot_setup_loop.sh  visbot_visualization.sh
bringup/scripts/data_record/: files_transfer.sh  files_transfer_swarm.sh  files_transfer_swarm.yaml  swarm_record.sh
bringup/scripts/data_record/(deprecated) data_record use_id/: README.txt  files_transfer.sh  files_transfer_swarm.sh  files_transfer_swarm.yaml  swarm_id.yaml  swarm_record.sh
bringup/scripts/data_record/(deprecated) rosbag_record/: README.txt  files_transfer.sh  files_transfer_swarm.sh  files_transfer_swarm.yaml  swarm_rosbag_record.sh
bringup/scripts/visbot_setup/: auto_takeoff_send_mission.sh  clean_roslog.sh  init_pose(old).sh  init_pose.sh  kill_rosnode.sh  mission(old).sh  mission.sh  mission_loop.sh  restart_swarm.sh  swarm_gui.sh  time_sync.sh
bringup/scripts/visbot_update/: README.md
bringup/scripts/visbot_update/config_update/: owl2_update.sh  owl3_update.sh  params_should_updated_owl3.temp
bringup/scripts/visbot_update/config_update/owl2/owl2_customized/: owl2_config.yaml  ros_proxy_drone.launch
bringup/scripts/visbot_update/config_update/owl2/owl2_factory/: owl2_config.yaml
bringup/scripts/visbot_update/config_update/owl3/owl3_customized/: owl3_config.yaml  ros_proxy_drone.launch
bringup/scripts/visbot_update/config_update/owl3/owl3_factory/: owl3_config.yaml  ros_proxy_drone.launch
bringup/scripts/visbot_update/scripts_update/: README.md  scripts_sync.sh  swarm_ip.yaml
bringup/scripts/visbot_update/scripts_update/visbot_scripts/data_record/: data_record.sh  data_record_kill.sh  fix_rosbag.sh  record_rosbag.sh  record_rosbag_kill.sh  redirect_log.sh  redirect_log_kill.sh
bringup/scripts/visbot_update/scripts_update/visbot_scripts/raw_data_record/: vio_raw_data_record.launch  vio_raw_data_record.sh  viotopics.yaml
bringup/scripts/visbot_update/scripts_update/visbot_scripts/rosbag_record/: rosbag_fix.sh  rosbag_record.sh  (+5 more)
bringup/scripts/visbot_update/ssh_connect/: ssh_config  ssh_connect.sh  swarm_ip.yaml
bringup/scripts/visbot_update/wifi_sync/owl2/: ap2net.yaml  net2ap.yaml  wifi_format.tmpl
bringup/scripts/visbot_update/wifi_sync/owl3/: ap2net.yaml  net2ap.yaml  wifi_ping.sh  wifi_switch.sh
bringup/scripts/visbot_visualization/: safmc_visualization.sh  single_visualization.sh  swarm_visualization.sh
src/apriltag_ros/config/: tags.yaml
src/apriltag_ros/launch/: continuous_detection.launch  visbot_safmc_detection.launch
src/apriltag_ros/src/: tag_result_pub.cpp
src/controller_msgs/: CMakeLists.txt  package.xml
src/controller_msgs/msg/: DroneState.msg  FlatTarget.msg  PoseStamped.msg  SwarmMatrix.msg  TargetCompletion.msg  TargetPose.msg  Trajectory.msg  YawTarget.msg  cmd.msg  control.msg
src/ros_proxy/: CMakeLists.txt  package.xml
src/ros_proxy/config/: rviz.rviz
src/ros_proxy/include/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
src/ros_proxy/launch/: ros_proxy_commander.launch  ros_proxy_commander_gui.launch  ros_proxy_commander_safmc.launch  ros_proxy_drone.launch  rviz.launch
src/ros_proxy/src/: ros_proxy.cpp  ros_proxy_safmc.cpp
src/swarm-rviz/: CMakeLists.txt  README.en.md  README.md  package.xml
src/swarm-rviz/config/: plugin_description.xml  rviz.rviz  single.rviz  single_rviz.sh  single_sim_rviz.sh  swarm.cfg  swarm.rviz  swarm_rviz.sh  swarm_safmc.rviz  swarm_sim.cfg  swarm_sim.rviz  swarm_sim_rviz.sh  swarm_sim_visbot.rviz  swarm_sim_visbot.sh
src/swarm-rviz/launch/: safmc_rviz.launch  single_rviz.launch  swarm_rviz.launch  swarm_sim_rviz.launch  swarm_sim_visbot.launch
src/swarm-rviz/src/: swarm_tool.cpp  swarm_tool.h
src/swarm_gui/: CMakeLists.txt  README.md  package.xml
src/swarm_gui/launch/: swarm_gui.launch
src/swarm_gui/scripts/: main.py
src/swarm_gui/utils/: mainWindow.py  mavlink_acquire.py  plotCanvas.py  ros_acquire.py  swarmNode.py
src/visbot_monitor/: CMakeLists.txt  README.md
src/visbot_monitor/cmd/: cmd.sh  monitor.sh  topics.txt
src/visbot_monitor/cmd/cmd/: follow.msg  hit.msg  landing.msg  setpoint.msg  start.msg  stoptask.msg  swmatrix (original).msg  swmatrix.msg  takeoff.msg  track.msg
src/visbot_monitor/config/init_pose/: 1.forward_4_square_drones.yaml  2.forward_2_drones.yaml  3.backup_10_drones.yaml  3.forward_8_drones.yaml  4.forward_10_drones.yaml  4.forward_2line_10_drones.yaml  5.forward_12_drones.yaml  5.forward_2line_11_drones.yaml  6.counter_4_drones.yaml  6.forward_3line_12_drones.yaml  7.rectangle_loop_drone0.yaml  8.forward_1_drone.yaml
src/visbot_monitor/config/mission/: 1.forward_4m_2_drones.yaml  2.forward_2_drones.yaml  3.backup_10_drones.yaml  3.forward_30m_8_drones.yaml  4.forward_2line_10_drones.yaml  4.forward_30m_10_drones.yaml  5.forward_2line_11_drones.yaml  5.forward_2m_12_drones.yaml  6.counter_15m_4_drones.yaml  6.forward_3line_12_drones.yaml  7.forward_20m_6_drones.yaml  8.forward_ACT_LAB_1_drone.yaml
src/visbot_monitor/config/mission_loop/: 1.rectangle_loop_drone0.yaml  2.rectangle_loop_drone1.yaml
src/visbot_monitor/config/rviz/: rviz.rviz  single_visualization.rviz
src/visbot_monitor/launch/: auto_takeoff_send_mission.launch  depth_visualization.launch  init_pose(old).launch  init_pose.launch  rviz.launch  sequential_waypoint(old).launch  sequential_waypoint.launch  sequential_waypoint_loop.launch  single_visualization.launch
src/visbot_monitor/log/: 0419_01.txt
src/visbot_monitor/scripts/: auto_takeoff_send_mission.py  goal_repub.py  init_pose_pub(old).py  init_pose_pub.py  sequential_waypoints_loop.py  sequential_waypoints_mission(old).py  sequential_waypoints_mission.py  tf_transform_for_test.py
src/visbot_monitor/src/: depth2pcl.cpp
