<?xml version="1.0"?>
<package format="2">
  <name>controller_msgs</name>
  <version>0.0.1</version>
  <description>
    controller_msgs includes the definition for custom messages for the captain package.
  </description>

  <maintainer email="tiger@visbot.com.cn">Tiger Chen</maintainer>
  <license>BSD</license>

  <url type="website">https://visbot.com.cn</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>mavros_msgs</depend> -->
  <depend>sensor_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
