<?xml version="1.0"?>
<package>
  <name>swarm_rviz</name>
  <version>0.11.0</version>
  <description>
      The swarm_tool package
  </description>
  <maintainer email="tigerch2002@sina.com">Tiger Chen</maintainer>
  <license>BSD</license>

  <url></url>
  <author>Tiger Chen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
      <rviz plugin="${prefix}/config/plugin_description.xml"/>
  </export>
</package>
